--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 												<iframe src="#"></iframe>
 											</a>
 											<header>
-												<h3>Task Haven</h3>
+												<h3>Task Haven1</h3>
 												<li><a href="https://github.com/d-collins2/Task-Haven-Frontend" class="icon fa-github"><span class="label">Front End</span></a> : Front-End Repository</li>
 												<li><a href="https://github.com/d-collins2/Task-Haven-Backend" class="icon fa-github"><span class="label">Back End</span></a> : Back-End Repository</li>
 											</header>
