--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 								<h2 class="major">Projects</h2>
 								<div class="row">
 									<div class="col-12 col-12-mobile">
-											<a href="1" class="image fit">
-												<iframe src="#"></iframe>
+											<a href="https://www.youtube.com/watch?v=k06zraOeP7A&t=9s" class="image fit">
+												<iframe src="https://www.youtube.com/watch?v=k06zraOeP7A&t=9s"></iframe>
 											</a>
 											<header>
 												<h3>Task Haven</h3>
@@ -74,7 +74,7 @@
 										</div><br>
 									<div class="col-12 col-12-mobile">
 											<a href="#" class="image fit">
-												<iframe src="#"></iframe>
+												<iframe src="https://www.youtube.com/watch?v=fC4D09zaoDA"></iframe>
 											</a>
 											<header>
 												<h3>Block Booster</h3>
@@ -87,7 +87,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main align-center"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>
 									Full stack web developer with a passion for helping others and creating new experiences through the web.
 									With experience in Ruby on Rails, JavaScript, and React and a background working with children,
@@ -372,7 +372,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; DamonCollins. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy;2019 DamonCollins. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
