--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<div class="row">
 								<div class="col-12 col-12-mobile">
 										<a href="https://www.youtube.com/watch?v=k06zraOeP7A&t=9s" class="image fit">
-											<iframe src="https://www.youtube.com/watch?v=k06zraOeP7A&t=9s"></iframe>
+											<iframe src="https://youtu.be/3Zc7Oco0yII"></iframe>
 										</a>
 										<header>
 											<h3>Task Haven</h3>
