--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 							<h2 class="major">Projects</h2>
 							<div class="row">
 								<div class="col-12 col-12-mobile">
-										<a href="https://www.youtube.com/watch?v=k06zraOeP7A&t=9s" class="image fit">
-											<iframe src="https://youtu.be/3Zc7Oco0yII"></iframe>
+										<a href="#" class="image fit">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/k06zraOeP7A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</a>
 										<header>
 											<h3>Task Haven</h3>
@@ -63,7 +63,7 @@
 									</div><br>
 								<div class="col-12 col-12-mobile">
 										<a href="#" class="image fit">
-											<iframe src="#"></iframe>
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/3Zc7Oco0yII" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</a>
 										<header class="center">
 											<h3>PodCaster</h3>
@@ -73,7 +73,7 @@
 									</div><br>
 								<div class="col-12 col-12-mobile">
 										<a href="#" class="image fit">
-											<iframe src="https://www.youtube.com/watch?v=fC4D09zaoDA"></iframe>
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/fC4D09zaoDA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</a>
 										<header>
 											<h3>Block Booster</h3>
@@ -120,14 +120,20 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/damon-collins/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://github.com/d-collins2/" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 							</ul>
 						</article>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/damon-collins/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/d-collins2/" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+						</ul>
 						<p class="copyright">&copy;2019 DamonCollins. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
