need to link contact page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<!-- Contact -->
 						<article id="contact">
 							<h2 class="major">Contact</h2>
-							<form method="post" action="#">
+							<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
@@ -116,7 +116,8 @@
 									<li><input type="submit" value="Send Message" class="primary" /></li>
 									<li><input type="reset" value="Reset" /></li>
 								</ul>
-							</form>
+							</form> -->
+							Coming Soon!
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/damon-collins/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://github.com/d-collins2/" class="icon fa-github"><span class="label">GitHub</span></a></li>
