added changes to projects section

--- a/index.html
+++ b/index.html
@@ -69,17 +69,22 @@
 								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen>
 							</iframe>
-							<header>
+							<header class="major">
+								<br>
 								<h3>Task Haven</h3>
 								<li>
-									<a href="https://github.com/d-collins2/Task-Haven-Frontend" class="icon fa-github">
-										<span class="label">Front End</span>
-									</a> : Front-End Repository
+									<span style="font-size: 1.2em;">
+										<a href="https://github.com/d-collins2/Task-Haven-Frontend" class="icon fa-github">
+											<span class="label">Front End</span>
+										</a> : Front-End Repository
+									</span>
 								</li>
 								<li>
-									<a href="https://github.com/d-collins2/Task-Haven-Backend" class="icon fa-github">
-										<span class="label">Back End</span>
-									</a> : Back-End Repository
+									<span style="font-size: 1.2em;">
+										<a href="https://github.com/d-collins2/Task-Haven-Backend" class="icon fa-github">
+											<span class="label">Back End</span>
+										</a> : Back-End Repository
+									</span>
 								</li>
 							</header>
 						</div><br>
@@ -94,20 +99,25 @@
 								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen>
 							</iframe>
-							<header class="center">
+							<header class="major">
+								<br>
 								<h3>PodCaster</h3>
 								<li>
-									<a href="https://github.com/d-collins2/Podcaster-Frontend" class="icon fa-github">
-										<span class="label">Front End</span>
-									</a> : Front-End Repository
+									<span style="font-size: 1.2em;">
+										<a href="https://github.com/d-collins2/Podcaster-Frontend" class="icon fa-github">
+											<span class="label">Front End</span>
+										</a> : Front-End Repository
+									</span>
 								</li>
 								<li>
-									<a href="https://github.com/d-collins2/Podcaster-Backend" class="icon fa-github">
-										<span class="label">Back End</span>
-									</a> : Back-End Repository
+									<span style="font-size: 1.2em;">
+										<a href="https://github.com/d-collins2/Podcaster-Backend" class="icon fa-github">
+											<span class="label">Back End</span>
+										</a> : Back-End Repository
+									</span>
 								</li>
 							</header>
-						</div>
+						</div><br>
 
 						<div class="col-12 col-12-mobile">
 							<iframe
@@ -118,15 +128,18 @@
 									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 									allowfullscreen>
 								</iframe>
-								<header>
+								<header class="major">
+									<br>
 									<h3>Block Booster</h3>
 									<li>
-										<a href="https://github.com/d-collins2/BlockBooster" class="icon fa-github">
-											<span class="label">Front End</span>
-										</a> : Rails Repository
+										<span style="font-size: 1.2em;">
+											<a href="https://github.com/d-collins2/BlockBooster" class="icon fa-github">
+												<span class="label">Front End</span>
+											</a> : Rails Repository
+										</span>
 									</li>
 								</header>
-							</div>
+							</div><br>
 						</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</div>
@@ -137,10 +150,10 @@
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
-						<header class="major">
+						<header class="major" >
 							<h2>Skills</h2>
 						</header>
-						<p>I am currently using:</p>
+						<span style="font-size: 30px;">I am currently using:</span><br>
 						<ul class="icons-grid">
 							<li>
 								<span style="font-size: 48px;">
