made youtube videos responsive

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							problems.
 						</h4>
 						<h4>
-						 	I like to focus on creating easy to use and vibrant web design.
+						 	I like to create easy to use and vibrant web design.
 						</h4>
 						<h4>
 							Let's Create Together!
@@ -61,14 +61,16 @@
 						</header>
 
 						<div class="col-12 col-12-mobile">
-							<iframe
-								width="470"
-								height="325"
-								src="https://www.youtube.com/embed/k06zraOeP7A"
-								frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen>
-							</iframe>
+							<div class="video-container">
+								<iframe
+									width="470"
+									height="325"
+									src="https://www.youtube.com/embed/k06zraOeP7A"
+									frameborder="0"
+									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen>
+								</iframe>
+							</div>
 							<header class="major">
 								<br>
 								<h3>Task Haven</h3>
@@ -89,16 +91,17 @@
 							</header>
 						</div><br>
 
-
 						<div class="col-12 col-12-mobile">
-							<iframe
-								width="470"
-								height="325"
-								src="https://www.youtube.com/embed/3Zc7Oco0yII"
-								frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen>
-							</iframe>
+							<div class="video-container">
+								<iframe
+									width="470"
+									height="325"
+									src="https://www.youtube.com/embed/3Zc7Oco0yII"
+									frameborder="0"
+									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen>
+								</iframe>
+							</div>
 							<header class="major">
 								<br>
 								<h3>PodCaster</h3>
@@ -120,27 +123,29 @@
 						</div><br>
 
 						<div class="col-12 col-12-mobile">
-							<iframe
-									width="470"
-									height="325"
-									src="https://www.youtube.com/embed/fC4D09zaoDA"
-									frameborder="0"
-									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-									allowfullscreen>
-								</iframe>
-								<header class="major">
-									<br>
-									<h3>Block Booster</h3>
-									<li>
-										<span style="font-size: 1.2em;">
-											<a href="https://github.com/d-collins2/BlockBooster" class="icon fa-github">
-												<span class="label">Front End</span>
-											</a> : Rails Repository
-										</span>
-									</li>
-								</header>
-							</div><br>
-						</div>
+							<div class="video-container">
+								<iframe
+										width="470"
+										height="325"
+										src="https://www.youtube.com/embed/fC4D09zaoDA"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen>
+									</iframe>
+							</div>
+							<header class="major">
+								<br>
+								<h3>Block Booster</h3>
+								<li>
+									<span style="font-size: 1.2em;">
+										<a href="https://github.com/d-collins2/BlockBooster" class="icon fa-github">
+											<span class="label">Front End</span>
+										</a> : Rails Repository
+									</span>
+								</li>
+							</header>
+						</div><br>
+					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
@@ -156,27 +161,19 @@
 						<span style="font-size: 30px;">I am currently using:</span><br>
 						<ul class="icons-grid">
 							<li>
-								<span style="font-size: 48px;">
-									<i class="fab fa-js"></i>
-								</span>
+								<span style="font-size: 48px;"><i class="fab fa-js"></i></span>
 								<h3>JavaScript</h3>
 							</li>
 							<li>
-								<span style="font-size: 48px;">
-									<i class="fab fa-react"></i>
-								</span>
+								<span style="font-size: 48px;"><i class="fab fa-react"></i></span>
 								<h3>React.Js</h3>
 							</li>
 							<li>
-								<span style="font-size: 48px;">
-									<i class="fab fa-sketch"></i>
-								</span>
+								<span style="font-size: 48px;"><i class="fab fa-sketch"></i></span>
 								<h3>Ruby</h3>
 							</li>
 							<li>
-								<span style="font-size: 48px;">
-									<i class="fab fa-sketch"></i>
-								</span>
+								<span style="font-size: 48px;"><i class="fab fa-exclamation-circle"></i></span>
 								<h3>Rails</h3>
 							</li>
 						</ul>
