--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<h3>Ruby</h3>
 							</li>
 							<li>
-								<span style="font-size: 48px;"><i class="fab fa-exclamation-circle"></i></span>
+								<span style="color: grey;"><img height'40px' width='40px' src="images/rails.jpg" alt="" /></span>
 								<h3>Rails</h3>
 							</li>
 						</ul>
