made skill logos colored

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						<span style="font-size: 30px;">I am currently using:</span><br>
 						<ul class="icons-grid">
 							<li>
-								<span style="font-size: 48px;"><i class="fab fa-js"></i></span>
+								<span><img height'40px' width='40px' src="images/js.svg" alt="" /></span>
 								<h3>JavaScript</h3>
 							</li>
 							<li>
@@ -169,11 +169,11 @@
 								<h3>React.Js</h3>
 							</li>
 							<li>
-								<span style="font-size: 48px;"><i class="fab fa-sketch"></i></span>
+								<span><img height'40px' width='40px' src="images/ruby.svg" alt="" /></span>
 								<h3>Ruby</h3>
 							</li>
 							<li>
-								<span style="color: grey;"><img height'40px' width='40px' src="images/rails.jpg" alt="" /></span>
+								<span><img height'40px' width='40px' src="images/rails.jpg" alt="" /></span>
 								<h3>Rails</h3>
 							</li>
 						</ul>
